[package]
name = "nosy"
version = "0.1.0"
description = "" # TODO: add

repository = { workspace = true }
authors = { workspace = true }

categories = { workspace = true }
keywords = { workspace = true }

edition = { workspace = true }
rust-version = { workspace = true }

license = { workspace = true }
readme = "README.md"

[dependencies]
toml = "0.8.12"